updating template, testing title block

--- a/_posts/2015-05-09-bo-cases.md
+++ b/_posts/2015-05-09-bo-cases.md
@@ -1,7 +1,9 @@
-Title: Bodacious Cases
-Date: 2015-05-09
-Tags: products, crowd-funding, woman-owned business, technology
-
+---
+layout:	post
+title: 	"Bodacious Cases"
+date: 	2015-05-09
+categories: products, crowd-funding, woman-owned business, technology
+---
 
 While I don't work for the company and am not a spokesman for them, I would like to share a few quick thoughts about the Bodacious Cases company.
 
