updating the headers

--- a/_posts/2013-06-27-agile42.md
+++ b/_posts/2013-06-27-agile42.md
@@ -1,5 +1,6 @@
-Title: Training by Agile42
-Date: 2013-06-27
+---
+title: "Training by Agile42"
+date: 2013-06-27
 Tags: agile, training, tips, recommendation
 
 For the last two days, I have been attending Scrum training by [Agile42][]. I am not new to agile. I'm not an expert in academic agile, however I considered myself to be pretty good (B average) at practical agile.
