--- a/_posts/2014-04-08-toggl.md
+++ b/_posts/2014-04-08-toggl.md
@@ -1,5 +1,6 @@
-Title: Critique of Toggl
-Date: 2014-04-08
+---
+title: "Critique of Toggl"
+date: 2014-04-08
 Tags: tools, review, efficiency
 
 [Toggl]: http://toggl.com
