updating the headers

--- a/_posts/2013-05-22-daftPunk.md
+++ b/_posts/2013-05-22-daftPunk.md
@@ -1,6 +1,8 @@
-Title: Daft Punk : Random Access Memories
-Date: 20130522
-Tags: music, review, recommended
+---
+title: "Daft Punk : Random Access Memories"
+date: 20130522
+categories: music review recommended
+---
 
 I pre-ordered Daft Punk's new album *(yes, new!!!... and album?)* ["Random Access Memories" from Amazon][RAM] and received it Tuesday. It is, for lack of any other word to adequately describe it, perfect.
 
