--- a/_posts/2014-04-08-toggl.md
+++ b/_posts/2014-04-08-toggl.md
@@ -1,6 +1,8 @@
-Title: Critique of Toggl
-Date: 2014-04-08
-Tags: tools, review, efficiency
+---
+title: "Critique of Toggl"
+date: 2014-04-08
+categories: tools review efficiency
+---
 
 [Toggl]: http://toggl.com
 [tracker]: https://play.google.com/store/apps/details?id=com.dynamicg.timerecording
