--- a/_posts/2014-07-05-luks.md
+++ b/_posts/2014-07-05-luks.md
@@ -1,6 +1,8 @@
-Title: Encrypted file containers using LUKS
-Date: 2014-07-05
-Tags: linux, security, encryption
+---
+title: "Encrypted file containers using LUKS"
+date: 2014-07-05
+categories: linux security encryption
+---
 
 ## Intro / Reasoning
 
