a bit more cleanup

--- a/_posts/2014-04-08-toggl.md
+++ b/_posts/2014-04-08-toggl.md
@@ -77,5 +77,4 @@ What's funny is that after seeing the play button on [Toggl][] and forcing mysel
 It has all of the reporting options I need, and I've been taking notes in a text editor and copying them into the app at the end of the month, so I may be sticking with it. Also, the free version has all of the functionality of the pro version, except for Google Calendar Sync, and, they let you run the free version as long as you like. The [pro version](https://play.google.com/store/apps/details?id=com.dynamicg.timerecording.pro) removes ads and it's a one time fee of $2.95, so test out the free one for a while, and then shell out the $3 for a solid app. It will import all of your free data and settings.
 
 [img1]: https://dl.dropboxusercontent.com/u/16078906/screenshots/2014-04-08-toggl-1.png
-[img2]:
-https://dl.dropboxusercontent.com/u/16078906/screenshots/2014-04-08-toggl-2.png
+[img2]: https://dl.dropboxusercontent.com/u/16078906/screenshots/2014-04-08-toggl-2.png
